[Sean/Yan Chao] updated the color scheme and fixed layout issues

--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -8,29 +8,30 @@
 .button-group-hr {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  margin-left: 3ch;
+  justify-items: center;
 }
 
 .button-group-qm {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  margin-left: 3ch;
+  justify-items: center;
 }
 
 .card-hr {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background: beige;
   text-align: center;
-  justify-content: center;
-  width: 35ch;
-  height: 25ch;
+  width: 100%;
+  height: 100%;
 }
 
 .card-qm {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   background: beige;
   text-align: center;
-  justify-content: center;
-  width: 30ch;
-  height: 25ch;
+  width: 100%;
 }
